Update documentation location

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "msc_citypage"
 version = "0.1.3"
 edition = "2024"
 description = "Retrieve weather conditions and forecasts for Canadian cities from the Meteorological Service of Canada (MSC) "
-documentation = "https://docs.rs/crate/msc_citypage"
+documentation = "https://docs.rs/msc_citypage/"
 readme = "README.md"
 repository = "https://github.com/thekakkun/msc_citypage"
 license-file = "LICENSE"
